creusot/tests/should_fail/prusti/deny_zombies/old_mut.stderr
error: `(&'a mut T, u32)` cannot be moved from `'pre` to `'post` without becoming a zombie `(creusot_contracts::prusti::Zombie<&'a mut T>, u32)`
 --> old_mut.rs:5:12
  |
5 | #[ensures(*x.0 == *result)]
  |            ^
  |
note: the lint level is defined here
 --> old_mut.rs:1:9
  |
1 | #![deny(creusot::prusti_zombie)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error[creusot]: invalid mut dereference of zombie expression with lifetime `'a` in state `'post`
 --> old_mut.rs:5:12
  |
5 | #[ensures(*x.0 == *result)]
  |            ^^^

error: aborting due to 2 previous errors

